corrected swagger and added specific method to get all train with filters (for postman testings)
